# cartron

./: .gitignore  MOVEIT2_SETUP_GUIDE.md  README.md  aria_debug_stream.py  can_activate.sh  check_can_windows.py  fastdds_aria_unicast.xml  fix_aria_dds_firewall.ps1  perception_bridge.py  piper.srdf  piper_mtc_config.yaml  quick_start.sh  quick_start_ui.sh  record_case1_aria_only.sh  record_case1_robot_bag.sh  record_case1_test.sh  run_aria_eye_viewer.sh  run_aria_hand_tracker.sh  run_aria_stream_smoke.sh  run_aria_usb_stream.sh  tags.yaml  test_bus_state.py  verify_installation.py  vortex_setup.ps1  watch_aria_usb.ps1
aria_teleop/: LAPTOP_FLIR_USB_ETHERNET_STREAM_TEST.md  ROBOT_ARIA_EXPERIMENT_RUNBOOK.md  STATIONARY_GAZE_TEST_PROTOCOL.md  __init__.py  _test_profiles.py  align_aria_and_rosbag.py  aria_eye_viewer.py  aria_hand_tracker.py  aria_piper_bridge.py  aria_stream_smoke.py  aria_udp_streamer.py  aria_viz_viewer.py  check_api.py  check_mps_api.py  find_hw_id.py  fix_iptables.sh  gaze_mapper.py  hand_pose_mapper.py  id_can_port.py  live_eye_gaze_model.py  mps_hand_viewer.py  setup_usb.ps1  sim_hand_tracker.py  test_align_aria_and_rosbag.py  test_aria_import.sh  test_can_diagnostic.py  test_gaze_mapper.py  test_gs_usb.py  test_gs_usb_v2.py  test_integration.py  udp_hand_tracker.py  windows_candump.py
calibrations/: aria_eye_calibration.json  (+1 more)
install/: local_setup.sh  (+1 more)
src/piper_simulation/: CMakeLists.txt  package.xml
src/piper_simulation/launch/: display.launch.py
src/piper_simulation/rviz/: piper_config.rviz
src/piper_simulation/urdf/: piper_arm.urdf
(+29 files in other folders)
